--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   margin: 5px;
-  font-size: 2vw;
+  font-size: 30px;
 }
 body {
   background: url(asoggetti-44oFcp01cVU-unsplash.jpg) no-repeat center center fixed; 
